--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"@appwrite.io/pink": "^0.0.6"
+		"@appwrite.io/pink": "^0.0.6",
+		"@sveltejs/adapter-static": "^2.0.2"
 	}
 }
